crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_203_Multicart203_35_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-203-Multicart203/35-in-1 [p1].zip
rom_sha256=d5df562241226b9cc478fff79f6c64b3ad7a56cea7ccc9336ae2206d4cc442d7
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=b9320dd67503647a
checkpoint f900 fb_fnv1a64=b9c4162c7ef59c8d
checkpoint f1100 fb_fnv1a64=c3c3ad8e58ab0def
