crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_203_Multicart203_42_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-203-Multicart203/42-in-1 [p1][!].nes
rom_sha256=c4532756dac28462695a96e63f2a34fdfff1ffb45b851004d5d4f3b6fbe23f28
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=b9320dd67503647a
checkpoint f900 fb_fnv1a64=b9c4162c7ef59c8d
checkpoint f1100 fb_fnv1a64=c3c3ad8e58ab0def
