crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_205_BMC_JC016_4_in_1_K_3131GS_GN_45_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-205-BMC-JC016/4-in-1 (K-3131GS, GN-45) [p1][!].zip
rom_sha256=b21d51c84078ebeaf810c1dc06543961cce1edde795f5f2a23889fd2dca46e06
frames=1141
fb_bytes=245760
cycles=33949962
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
